sns share controller

--- a/Draw/Controller/Feedback/ReportController.xib
+++ b/Draw/Controller/Feedback/ReportController.xib
@@ -38,12 +38,12 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="287036266">
+					<object class="IBUIImageView" id="471012633">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="912763384"/>
+						<reference key="NSNextKeyView" ref="170893908"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -52,12 +52,12 @@
 							<string key="NSResourceName">wood_bg.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="912763384">
+					<object class="IBUIImageView" id="170893908">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="908337688"/>
+						<reference key="NSNextKeyView" ref="85109912"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -66,7 +66,7 @@
 							<string key="NSResourceName">paper.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="908337688">
+					<object class="IBUIImageView" id="85109912">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 50}</string>
@@ -80,7 +80,7 @@
 							<string key="NSResourceName">topwood.png</string>
 						</object>
 					</object>
-					<object class="IBUIImageView" id="1019222584">
+					<object class="IBUIImageView" id="305673781">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{40, 93}, {240, 159}}</string>
@@ -95,7 +95,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{40, 93}, {240, 159}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="682836053"/>
+						<reference key="NSNextKeyView" ref="530073234"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -109,11 +109,11 @@
 							<int key="IBUIAutocapitalizationType">2</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="743403532">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="319194837">
 							<int key="type">1</int>
 							<double key="pointSize">14</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="88996298">
+						<object class="NSFont" key="IBUIFont" id="24347057">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
@@ -134,10 +134,7 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
+						<reference key="IBUINormalTitleColor" ref="323497581"/>
 						<object class="NSColor" key="IBUINormalTitleShadowColor" id="207043518">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
@@ -157,7 +154,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 6}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="706408718"/>
+						<reference key="NSNextKeyView" ref="1057607767"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -177,12 +174,12 @@
 						<reference key="IBUIFontDescription" ref="235740715"/>
 						<reference key="IBUIFont" ref="795933829"/>
 					</object>
-					<object class="IBUIImageView" id="483776848">
+					<object class="IBUIImageView" id="166051983">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{63, 45}, {194, 40}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="1019222584"/>
+						<reference key="NSNextKeyView" ref="305673781"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -191,7 +188,7 @@
 							<string key="NSResourceName">paperclip.png</string>
 						</object>
 					</object>
-					<object class="IBUITextField" id="682836053">
+					<object class="IBUITextField" id="530073234">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{40.5, 260}, {240, 31}}</string>
@@ -206,7 +203,7 @@
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace" id="40799281">
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="735331805">
 								<int key="NSID">2</int>
 							</object>
 						</object>
@@ -216,15 +213,15 @@
 							<int key="IBUIReturnKeyType">9</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="743403532"/>
-						<reference key="IBUIFont" ref="88996298"/>
+						<reference key="IBUIFontDescription" ref="319194837"/>
+						<reference key="IBUIFont" ref="24347057"/>
 					</object>
-					<object class="IBUIButton" id="706408718">
+					<object class="IBUIButton" id="1057607767">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{236, 3}, {72, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="483776848"/>
+						<reference key="NSNextKeyView" ref="166051983"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -239,11 +236,11 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="287036266"/>
+				<reference key="NSNextKeyView" ref="471012633"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="40799281"/>
+					<reference key="NSCustomColorSpace" ref="735331805"/>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -287,7 +284,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">contactText</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="682836053"/>
+						<reference key="destination" ref="530073234"/>
 					</object>
 					<int key="connectionID">19</int>
 				</object>
@@ -295,7 +292,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">contentBackground</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1019222584"/>
+						<reference key="destination" ref="305673781"/>
 					</object>
 					<int key="connectionID">20</int>
 				</object>
@@ -303,7 +300,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">doneButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="706408718"/>
+						<reference key="destination" ref="1057607767"/>
 					</object>
 					<int key="connectionID">25</int>
 				</object>
@@ -336,7 +333,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="682836053"/>
+						<reference key="source" ref="530073234"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">22</int>
@@ -344,7 +341,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">endEditingContact:</string>
-						<reference key="source" ref="682836053"/>
+						<reference key="source" ref="530073234"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">20</int>
 					</object>
@@ -353,7 +350,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">hideKeyboard:</string>
-						<reference key="source" ref="706408718"/>
+						<reference key="source" ref="1057607767"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -372,16 +369,16 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="287036266"/>
-							<reference ref="912763384"/>
-							<reference ref="908337688"/>
-							<reference ref="483776848"/>
+							<reference ref="471012633"/>
+							<reference ref="170893908"/>
+							<reference ref="85109912"/>
+							<reference ref="166051983"/>
 							<reference ref="736881445"/>
-							<reference ref="1019222584"/>
+							<reference ref="305673781"/>
 							<reference ref="51936184"/>
-							<reference ref="682836053"/>
+							<reference ref="530073234"/>
 							<reference ref="479943940"/>
-							<reference ref="706408718"/>
+							<reference ref="1057607767"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -413,37 +410,37 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="287036266"/>
+						<reference key="object" ref="471012633"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="912763384"/>
+						<reference key="object" ref="170893908"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="908337688"/>
+						<reference key="object" ref="85109912"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
-						<reference key="object" ref="483776848"/>
+						<reference key="object" ref="166051983"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
-						<reference key="object" ref="1019222584"/>
+						<reference key="object" ref="305673781"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">18</int>
-						<reference key="object" ref="682836053"/>
+						<reference key="object" ref="530073234"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="706408718"/>
+						<reference key="object" ref="1057607767"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
