--- a/Draw/Controller/Draw/ResultController.xib
+++ b/Draw/Controller/Draw/ResultController.xib
@@ -186,7 +186,6 @@
 						<string key="NSFrame">{{185, 405}, {120, 40}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -202,7 +201,7 @@
 					<object class="IBUILabel" id="207573161">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{6, 48}, {147, 33}}</string>
+						<string key="NSFrame">{{5, 48}, {147, 33}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="121188999"/>
@@ -224,18 +223,18 @@
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">20</double>
+							<double key="pointSize">18</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">20</double>
+							<double key="NSSize">18</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
 					<object class="IBUILabel" id="762364679">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{107, 50}, {193, 30}}</string>
+						<string key="NSFrame">{{106, 48}, {193, 30}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="179564450"/>
@@ -247,17 +246,18 @@
 						<string key="IBUIText">答案：蓝牙</string>
 						<reference key="IBUITextColor" ref="603616135"/>
 						<reference key="IBUIHighlightedColor" ref="262500899"/>
+						<reference key="IBUIShadowColor" ref="262500899"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">1</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">2</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">18</double>
+							<double key="pointSize">16</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">18</double>
+							<double key="NSSize">16</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -274,7 +274,6 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Result Of Turn </string>
-						<reference key="IBUITextColor" ref="603616135"/>
 						<nil key="IBUIHighlightedColor"/>
 						<reference key="IBUIShadowColor" ref="262500899"/>
 						<string key="IBUIShadowOffset">{0, 1}</string>
@@ -502,12 +501,12 @@
 							<reference ref="976911382"/>
 							<reference ref="179564450"/>
 							<reference ref="1019551133"/>
-							<reference ref="895424735"/>
 							<reference ref="121188999"/>
-							<reference ref="207573161"/>
 							<reference ref="942360114"/>
 							<reference ref="44119869"/>
 							<reference ref="762364679"/>
+							<reference ref="895424735"/>
+							<reference ref="207573161"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
