--- a/Draw/Controller/Feedback/AboutUsController.xib
+++ b/Draw/Controller/Feedback/AboutUsController.xib
@@ -125,7 +125,7 @@
 					<object class="IBUITextView" id="86431694">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 82}, {280, 188}}</string>
+						<string key="NSFrame">{{20, 64}, {280, 221}}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="401127547"/>
@@ -138,9 +138,9 @@
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIEditable">NO</bool>
-						<string type="base64-UTF8" key="IBUIText">UHJvZ3JhbSBCeQotLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLQpQSVBJ
-IFBlbmcKR2FteSBIdWFuZwpLaXJhIE91CgpEZXNpZ24gQnkKLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0t
-LS0tLS0tLS0tLS0tLS0tLS0tLS0KUm95Cg</string>
+						<string type="base64-UTF8" key="IBUIText">UHJvZ3JhbSBCeQotLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0KUElQSSBQZW5nCkdhbXkg
+SHVhbmcKS2lyYSBPdQoKRGVzaWduIEJ5Ci0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0K
+Um95IEhlCg</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
@@ -151,11 +151,11 @@ LS0tLS0tLS0tLS0tLS0tLS0tLS0KUm95Cg</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">14</double>
+							<double key="pointSize">19</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">14</double>
+							<double key="NSSize">19</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -211,7 +211,7 @@ LS0tLS0tLS0tLS0tLS0tLS0tLS0KUm95Cg</string>
 					<object class="IBUILabel" id="237823086">
 						<reference key="NSNextResponder" ref="502016194"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{62, 308}, {196, 21}}</string>
+						<string key="NSFrame">{{0, 308}, {320, 21}}</string>
 						<reference key="NSSuperview" ref="502016194"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
@@ -221,7 +221,7 @@ LS0tLS0tLS0tLS0tLS0tLS0tLS0KUm95Cg</string>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">CopyRight Sunny Orange</string>
+						<string key="IBUIText">Copyright©2011-2012 Sunny Orange</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
@@ -234,6 +234,7 @@ LS0tLS0tLS0tLS0tLS0tLS0tLS0KUm95Cg</string>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
+						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
 							<double key="pointSize">17</double>
